# NoTap-Looper

./: .gitignore  AndroidManifest.xml  AudioEngine.cpp  CMakeLists.txt  LockFreeRingBuffer.h  miniaudio_impl.cpp
cpp/: CMakeLists.txt
cpp/headers/: LockFreeRingBuffer.hpp  LooperEngine.hpp  NoiseGate.hpp  OboeBridge.hpp  OctaveResample.hpp  PitchShift.hpp
cpp/src/: JNIBridge.cpp  LooperEngine.cpp  OboeBridge.cpp
include/: LockFreeRingBuffer.hpp  LooperEngine.hpp
java/com/notap/looper/: AudioEngine.kt  EngineState.kt  MainActivity.kt
java/com/notap/looper/ui/: Design.kt
java/com/notap/looper/ui/state/: LooperUiState.kt  LooperViewModel.kt  Prefs.kt  PremiumPlans.kt
java/com/notap/looper/ui/views/: CometRingView.kt  IconMorphButton.kt  IconView.kt  LevelMeterView.kt  LoopVisualizerView.kt  RippleEmitterView.kt  SegmentedControlView.kt  SliderView.kt  SpotlightView.kt  VuMeterView.kt
src/: LooperEngine.cpp
tools/: render_icons.py
